Prototype for creating temporary object store credentials via assume-role
